bot config setup

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,7 @@
 [Roles]
-R_SPANJOOL_ID: 862698602938105886
-R_PRAAT_ID: 862698664865955851
+R_SPANJOOL_ID: 241653605134761985
+R_BURGERIJ_ID: 307236945980030976
 R_RIDDER_ID: 862719092104757249
 
+[Debug]
+OUTPUT_CHANNEL_ID: 
